--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==1.1.2
+numpy==1.19.2
 pandas==1.1.3
 requests==2.24.0
 statsmodels==0.12.0
-numpy==1.19.2
 scikit_learn==0.24.2
+gunicorn==20.1.0
